<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.si.restro.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/actionDetailsFragment"
            app:destination="@id/navigation_details"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />

        <action
            android:id="@+id/actionAddOrUpdateFragment"
            app:destination="@id/navigation_add_or_update"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/navigation_details"
        android:name="com.si.restro.ui.details.DetailsFragment"
        android:label="@string/title_details"
        tools:layout="@layout/fragment_details">
        <action
            android:id="@+id/actionHomeFragment"
            app:destination="@id/navigation_home"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
        <argument
            android:name="restaurantId"
            android:defaultValue="1"
            app:argType="integer" />

        <action
            android:id="@+id/actionAddOrUpdateFragment"
            app:destination="@id/navigation_add_or_update"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/navigation_add_or_update"
        android:name="com.si.restro.ui.addorupdate.AddOrUpdateFragment"
        android:label="@string/title_details"
        tools:layout="@layout/fragment_add_or_update">
        <action
            android:id="@+id/actionHomeFragment"
            app:destination="@id/navigation_home"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
        <argument
            android:name="restaurantId"
            android:defaultValue="0"
            app:argType="integer" />
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.si.restro.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

</navigation>